<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cybercell.bms_upload_pic.SuccessActivity"
    android:background="@drawable/bg_messages">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="50dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/district"
                android:textColor="#000000"
                android:id="@+id/textView3"/>
                <!--android:textSize="@dimen/txtsize"-->
                <!--android:textStyle="bold|italic"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text=""
                android:id="@+id/txt_dis" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/AC"
                android:layout_marginTop="20dp"
                android:textColor="#000000"

                android:id="@+id/textViewac"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <!--android:textStyle="bold"-->
            <!--android:textSize="@dimen/txtsize"-->

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinassemb"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:popupBackground="@color/colorPrimaryDark"
                android:spinnerMode="dialog" />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PS"

                android:layout_marginTop="20dp"

                android:id="@+id/textViewps"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#000000"/>
            <!--android:textSize="@dimen/txtsize"-->
            <!--android:textStyle="bold"-->

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinps"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:popupBackground="#FFFFFF"
                android:spinnerMode="dialog" />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <Button
            android:id="@+id/btn_chkrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="179dp"
            android:background="@color/colorAccent"
            android:elevation="14dp"
            android:onClick="getresult"
            android:text="Submit"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            />
        <!--android:textStyle="bold|italic"-->
        <!--android:textSize="15dp"-->
    </RelativeLayout>


</RelativeLayout>




